<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Activities.ForgetPasswordActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/custom_edit_text_style"
            android:inputType="phone"
            android:maxLength="13"
            android:padding="@dimen/_5sdp"
            android:text="+9627"
            tools:ignore="Autofill,LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/new_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/custom_edit_text_style"
                android:inputType="textPassword"
                android:padding="@dimen/_5sdp"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/repeat_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/edtConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/custom_edit_text_style"
                android:inputType="textPassword"
                android:padding="@dimen/_5sdp"
                tools:ignore="Autofill,LabelFor" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/verification_code_error"
            android:textColor="@color/red"
            android:textSize="@dimen/_8ssp"
            android:textStyle="bold"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_5sdp"
                android:indeterminate="true"
                android:indeterminateTint="@color/darkBlue"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_without_background_style"
                android:padding="@dimen/_10sdp"
                android:text="@string/save"
                android:visibility="visible"
                android:textAllCaps="false"
                android:textColor="@drawable/custom_button_text_color"
                android:textSize="@dimen/_12ssp" />

        </RelativeLayout>


    </LinearLayout>
</ScrollView>