<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".Fragments.MyRequestFragment">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:indeterminate="true"
            android:indeterminateTint="@color/blue"
            android:indeterminateTintMode="src_atop"
            android:visibility="visible"
            tools:targetApi="lollipop" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleMyRequests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/linearRequestEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/you_don_t_have_any_request"
                android:textSize="@dimen/_18ssp"
                android:visibility="visible" />

            <Button
                android:id="@+id/button_addRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:text="@string/add_post"
                android:textAllCaps="false"
                android:textColor="@drawable/custom_button_text_color"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button_pushٌRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:text="@string/request_offer"
                android:textAllCaps="false"
                android:textColor="@drawable/custom_button_text_color"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </FrameLayout>


</ScrollView>