<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/finishcardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        app:contentPadding="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPersonal"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_profile_default" />

            <TextView
                android:id="@+id/txtCaptainName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toEndOf="@id/imgPersonal"
                android:hint="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCaptainRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtCaptainName"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toEndOf="@id/imgPersonal"
                android:hint="@string/rate"
                android:textColor="@color/indigo"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/logincaptain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgPersonal"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnEndServicecaptain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/custom_button_follow_style"
                    android:paddingStart="@dimen/_85sdp"
                    android:paddingEnd="@dimen/_75sdp"
                    android:text="@string/end_service"
                    android:textAllCaps="false"
                    android:textColor="@drawable/custom_button_text_color"
                    android:textSize="@dimen/_14ssp" />

                <Button
                    android:id="@+id/btngotomap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/custom_button_follow_style"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:text="@string/location"
                    android:textAllCaps="false"
                    android:textColor="@drawable/custom_button_text_color"
                    android:textSize="@dimen/_14ssp" />

                <Button
                    android:id="@+id/btnviewoffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/custom_button_follow_style"
                    android:paddingEnd="@dimen/_5sdp"
                    android:text="@string/offer_details"
                    android:textAllCaps="false"
                    android:textColor="@drawable/custom_button_text_color"
                    android:textSize="@dimen/_14ssp"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/logincaptainrank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgPersonal"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="1">


                <Button
                    android:id="@+id/btnrate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:drawableStart="@drawable/ic_rank"
                    android:gravity="fill"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:text="@string/rate"
                    android:textAllCaps="false"
                    android:textColor="@drawable/custom_button_text_color"
                    android:textSize="@dimen/_13ssp"
                    android:visibility="visible"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>