<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".Fragments.ContactUsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoLink="phone"
            android:gravity="center|start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="Amman-Rabiea"
            android:textColor="@color/indigo"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:id="@+id/phone_card"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:id="@+id/phone_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoLink="phone"
            android:gravity="center|start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="+96791921227"
            android:textColor="@color/indigo"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:id="@+id/email_card"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoLink="email"
            android:gravity="center|start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="info@captin.com"
            android:textColor="@color/indigo"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>
</LinearLayout>