<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Fragments.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="@dimen/_2sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txtState"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/online"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="0.3"
                    android:theme="@style/SwitchTheme" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="@dimen/_2sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/language"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="RelativeOverlap" />

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:background="@drawable/custom_card_layout"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnEnglish"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custom_button_language"
                            android:checked="true"
                            android:text="@string/english"
                            android:textAllCaps="false"
                            android:textColor="@drawable/button_text_color"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/btnArabic"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custom_button_language"
                            android:text="@string/arabic"
                            android:textAllCaps="false"
                            android:textColor="@drawable/button_text_color"
                            android:textSize="12sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/cardEditPass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="@dimen/_2sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:weightSum="2">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/custom_icon_password" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:text="@string/change_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>